Write request manage